--- a/themes/Moov2/Styles/components/_avatar.scss
+++ b/themes/Moov2/Styles/components/_avatar.scss
@@ -10,8 +10,9 @@
 
 .avatar {
     display: block;
-    height: $avatar-dimensions;
-    width: $avatar-dimensions;
+    height: auto;
+    max-width: $avatar-dimensions;
+    min-width: $avatar-dimensions;
 
     border-radius: 50%;
 }
