--- a/themes/Moov2/Styles/trumps/_background.scss
+++ b/themes/Moov2/Styles/trumps/_background.scss
@@ -186,6 +186,7 @@
     left: -237px;
     top: 100px;
     width: 100px;
+    z-index: -1;
 
     @include bp-min-width($bp-medium) {
         top: 450px;
